# QUnitConversion

./: .gitignore  CMakeLists.txt  LICENSE.md  QUnitConversion.pri  QUnitConversion.pro  QUnitConversionTests.pro  README.md  _l_i_c_e_n_s_e_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  class_q_alias_dictionary-members.html  class_q_alias_dictionary.html  class_q_alias_dictionary_tests-members.html  class_q_alias_dictionary_tests.html  class_q_linear_function-members.html  class_q_linear_function.html  class_q_linear_function_tests-members.html  class_q_linear_function_tests.html  class_q_unit_conversion_family-members.html  class_q_unit_conversion_family.html  class_q_unit_conversion_rule-members.html  class_q_unit_conversion_rule.html  class_q_unit_convertor-members.html  class_q_unit_convertor.html  class_q_unit_convertor_tests-members.html  class_q_unit_convertor_tests.html  classes.html  dir_1a04fd9734621f35c05269afe5b06fd1.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d93a1d4020dea85bb71b237545b5e722.html  dir_e2ebbd8902ff37d41e65dc9e1dcca04d.html  doxyfile  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  (+34 more)
.github/workflows/: build.yml  doxygen.yml
QUnitConversion/: CMakeLists.txt  qaliasdictionary.cpp  qaliasdictionary.h  qlinearfunction.cpp  qlinearfunction.h  qunitconversionfamily.cpp  qunitconversionfamily.h  qunitconversionrule.cpp  qunitconversionrule.h  qunitconvertor.cpp  qunitconvertor.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  pages_1.js  related_0.js  searchdata.js  typedefs_0.js  variables_0.js
src/: CMakeLists.txt  QUnitConversion.pri  QUnitConversionTests.pro  doxyfile  qaliasdictionary.cpp  qaliasdictionary.h  qlinearfunction.cpp  qlinearfunction.h  qunitconversionfamily.cpp  qunitconversionfamily.h  qunitconversionrule.cpp  qunitconversionrule.h  qunitconvertor.cpp  qunitconvertor.h
src/QUnitConversion/: qlinearfunction.cpp  qlinearfunction.h  qunitconversionfamily.cpp  qunitconvertor.h
testdata/: aliases.json  conversion_rules.json
tests/: CMakeLists.txt  C_to_F.xlsx  main.cpp  qaliasdictionarytests.cpp  qaliasdictionarytests.h  qlinearfunctiontests.cpp  qlinearfunctiontests.h  qunitconvertortests.cpp  qunitconvertortests.h  resources.qrc  resources1.qrc
